--- a/wonderlust/package.json
+++ b/wonderlust/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "mongoose": "^8.9.5",
     "next": "15.1.5",
     "passport": "^0.7.0",
@@ -16,7 +17,9 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/react": "19.0.8",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.7.3"
   }
 }
