--- a/wonderlust/package.json
+++ b/wonderlust/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/node": "22.10.10",
     "@types/react": "19.0.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
