--- a/wonderlust/package.json
+++ b/wonderlust/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "@types/node": "22.10.10",
     "@types/react": "19.0.8",
+    "eslint": "9.19.0",
+    "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.7.3"
