test workflow pr

--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -26,9 +26,9 @@ jobs:
         working-directory: wonderlust
         run: npm run build
 
-      - name: Run lint checks
-        working-directory: wonderlust
-        run: npm run lint
+      # - name: Run lint checks
+      #   working-directory: wonderlust
+      #   run: npm run lint
 
     #   - name: Run tests
     #     working-directory: wonderlust
