--- a/wonderlust/package.json
+++ b/wonderlust/package.json
@@ -16,7 +16,8 @@
     "passport": "^0.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "22.10.10",
