--- a/wonderlust/package.json
+++ b/wonderlust/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "next": "15.1.5",
     "passport": "^0.7.0",
