--- a/wonderlust/package.json
+++ b/wonderlust/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.2.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.9.5",
