--- a/wonderlust/package.json
+++ b/wonderlust/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.9.5",
     "next": "15.1.5",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
