--- a/wonderlust/package.json
+++ b/wonderlust/package.json
@@ -17,6 +17,7 @@
     "next": "15.1.5",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "radix-ui": "^1.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
