Implemented social login feature with google

--- a/wonderlust/package.json
+++ b/wonderlust/package.json
@@ -16,8 +16,8 @@
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.9.5",
     "next": "15.1.5",
+    "next-auth": "^4.24.11",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
